--- a/resources/stylus/components/layout.styl
+++ b/resources/stylus/components/layout.styl
@@ -7,3 +7,99 @@
 .normal-flex
     display: flex
     align-items: center
+
+.page__hero
+    position: relative
+    background: $purple.lighten-5
+    height: calc(100vh - (72px + 128px))
+
+    &--image
+        display: flex
+        align-items: flex-end
+        justify-content: center
+        z-index: 1
+    
+    &--search
+        display: flex
+        flex-direction: column
+        align-items: center
+        justify-content: center
+        z-index: 1
+    
+    canvas
+        position: absolute
+        height: 100%
+        width: 100%
+        z-index: 0
+
+.text__hero
+    text-align: center
+    font-size: 26px
+    font-weight: 300
+    line-height: 1.2
+
+.find__hero
+    background: white
+    padding: 8px 16px
+    border-radius: 36px
+    margin-top: 36px
+
+    &--focus
+        box-shadow: 0px 5px 6px -3px rgba(0,0,0,0.2), 0px 9px 12px 1px rgba(0,0,0,0.14), 0px 3px 16px 2px rgba(0,0,0,0.12) !important
+
+    input
+        min-width: 300px
+        font-size: 36px
+        text-align: center
+        outline: none
+
+        &::-webkit-input-placeholder
+            color: $grey.lighten-3
+
+.page__statistic
+    height: 128px
+
+    &--text
+        font-size: 12px
+        padding-left: 16px
+        font-weight: bold
+        letter-spacing: 1px
+    
+    &--numb
+        font-size: 12px
+        font-weight: 300
+        line-height: 1
+    
+    &--icon
+        display: flex
+        background: $purple.base
+        align-items: center
+        justify-content: center
+        height: 70px
+        width: 54px
+    
+    &--list
+        min-width: 160px
+        line-height: 1.3
+        border-bottom: 1px solid 
+        position: relative
+
+        span
+            position: absolute
+            right: 0
+            font-weight: bold
+
+    .v-card
+        border-radius: 0
+        height: 100%
+        display: flex
+        align-items: center
+        justify-content: center
+
+        &.hover-on
+            z-index: 1
+            box-shadow: 0px 7px 8px -4px rgba(0,0,0,0.2), 0px 12px 17px 2px rgba(0,0,0,0.14), 0px 5px 22px 4px rgba(0,0,0,0.12) !important
+        
+        &.hover-off
+            z-index: 0
+            box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12) !important
