--- a/resources/stylus/components/layout.styl
+++ b/resources/stylus/components/layout.styl
@@ -103,3 +103,23 @@
         &.hover-off
             z-index: 0
             box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12) !important
+
+.announcement
+    &--head
+        font-size: 20px
+        font-weight: bold
+        // letter-spacing: 1px
+        text-align: center
+    
+    &--text
+        text-align: center
+        font-size: 16px
+
+    &--link
+        display: flex
+        justify-content: center
+    
+    &--note
+        text-align: center
+        margin-top: 4px
+        margin-bottom: 16px
