--- a/resources/stylus/components/table.styl
+++ b/resources/stylus/components/table.styl
@@ -18,6 +18,7 @@ table.v-datatable
             &.number-format
                 width: 110px
                 padding: 0 8px
+                
     
     .v-input
         &--selection-controls
@@ -25,3 +26,10 @@ table.v-datatable
 
             .v-input__slot
                 margin-bottom: 0
+
+table.v-table
+    thead tr th.column
+        &__number
+            width: 90px
+            padding: 0 8px
+            text-align: right
