--- a/resources/stylus/components/card.styl
+++ b/resources/stylus/components/card.styl
@@ -2,6 +2,7 @@
     &__flex
         &--toolbar
             margin-top: -65px
+            
 
 .v-card
     &__dialog
@@ -17,6 +18,16 @@
         canvas
             height: 70%
             width: 90%
+    
+    &__active
+        background: $cyan.lighten-5 !important
+        
+        &.hover-off
+            box-shadow: 0px 7px 8px -4px rgba(0,0,0,0.2), 0px 12px 17px 2px rgba(0,0,0,0.14), 0px 5px 22px 4px rgba(0,0,0,0.12) !important
+            z-index: 1 !important
+
+    &__table
+        padding: 0 8px
 
     &__statistic
         padding-left: 16px
