--- a/resources/stylus/components/layout.styl
+++ b/resources/stylus/components/layout.styl
@@ -43,9 +43,14 @@
     padding: 8px 16px
     border-radius: 36px
     margin-top: 36px
+    border: 1px solid $grey.lighten-4
 
     &--focus
         box-shadow: 0px 5px 6px -3px rgba(0,0,0,0.2), 0px 9px 12px 1px rgba(0,0,0,0.14), 0px 3px 16px 2px rgba(0,0,0,0.12) !important
+
+    &--error
+        border: 1px solid $red.base
+        box-shadow: 0px 5px 6px -3px rgba(255,0,26,0.2), 0px 9px 12px 1px rgba(255,0,26,0.14), 0px 3px 16px 2px rgba(255,0,26,0.12) !important
 
     input
         min-width: 300px
@@ -58,12 +63,14 @@
 
 .page__statistic
     height: 128px
+    overflow: hidden
 
     &--text
         font-size: 12px
         padding-left: 16px
         font-weight: bold
         letter-spacing: 1px
+        flex: 1 1 0
     
     &--numb
         font-size: 12px
@@ -95,14 +102,15 @@
         display: flex
         align-items: center
         justify-content: center
+        padding: 0 24px
 
         &.hover-on
             z-index: 1
-            box-shadow: 0px 7px 8px -4px rgba(0,0,0,0.2), 0px 12px 17px 2px rgba(0,0,0,0.14), 0px 5px 22px 4px rgba(0,0,0,0.12) !important
+            box-shadow: 0px 7px 8px -4px rgba(0,0,0,0.2), 0px 12px 17px 2px rgba(0,0,0,0.14), 0px 5px 22px 4px rgba(0,0,0,0.12)
         
         &.hover-off
             z-index: 0
-            box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12) !important
+            box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12)
 
 .announcement
     &--head
