--- a/resources/stylus/components/layout.styl
+++ b/resources/stylus/components/layout.styl
@@ -13,6 +13,17 @@
     background: $purple.lighten-5
     height: calc(100vh - (72px + 128px))
 
+    &--small
+        position: relative
+        background: $purple.lighten-5
+        height: 180px
+
+        canvas
+            position: absolute
+            height: 100%
+            width: 100%
+            z-index: 0
+
     &--image
         display: flex
         align-items: flex-end
